conditionals are working fine and complementary things are ok